Make CollapsableToolbar hide text when displaying the image
- Hide Title when displaying the image in the CollapsableToolbar in
MovieDetails
- Rename classes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         </activity>
 
         <activity
-            android:name=".ui.MovieDetailActivity"
+            android:name=".ui.MovieDetailsActivity"
             android:parentActivityName=".ui.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
