Get MovieDetails from query when selecting a movie

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity" />
         </activity>
+
+        <provider
+            android:name=".data.FavoriteMoviesProvider"
+            android:authorities="com.xengar.android.movieguide"
+            android:enabled="true"
+            android:exported="true" />
+
     </application>
 
 </manifest>
