--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'org.apache.commons:commons-lang3:3.5'
+    compile 'com.android.support:palette-v7:25.1.0'
     testCompile 'junit:junit:4.12'
 }
