--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,18 +37,18 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.MovieDetailsActivity"
+            android:name=".ui.MovieActivity"
             android:parentActivityName=".ui.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity" />
         </activity>
         <activity
-            android:name=".ui.PersonProfileActivity"
-            android:parentActivityName=".ui.MovieDetailsActivity">
+            android:name=".ui.PersonActivity"
+            android:parentActivityName=".ui.MovieActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.MovieDetailsActivity" />
+                android:value=".ui.MovieActivity" />
         </activity>
         <activity
             android:name=".ui.SettingsActivity"
