--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,7 @@
         </activity>
 
         <provider
-            android:name=".data.FavoriteMoviesProvider"
+            android:name=".data.FavoritesProvider"
             android:authorities="com.xengar.android.movieguide"
             android:enabled="true"
             android:exported="true" />
