--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,9 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.5'
     compile 'com.github.castorflex.smoothprogressbar:library:1.1.0'
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.2.0'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     testCompile 'junit:junit:4.12'
 }
