--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".ui.MovieActivity"
             android:parentActivityName=".ui.MainActivity">
@@ -66,6 +67,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity" />
         </activity>
+
         <activity
             android:name=".ui.PersonActivity"
             android:parentActivityName=".ui.MovieActivity">
@@ -73,6 +75,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MovieActivity" />
         </activity>
+
         <activity
             android:name=".ui.SettingsActivity"
             android:label="@string/menu_option_settings"
@@ -82,6 +85,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity" />
         </activity>
+
         <activity
             android:name=".ui.TVShowActivity"
             android:label="@string/title_activity_tvshow"
@@ -90,6 +94,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity" />
         </activity>
+
         <activity
             android:name=".ui.SearchActivity"
             android:parentActivityName=".ui.MainActivity">
@@ -102,7 +107,8 @@
             android:name=".data.FavoritesProvider"
             android:authorities="com.xengar.android.movieguide"
             android:enabled="true"
-            android:exported="true" />
+            android:exported="true"
+            android:protectionLevel="signature" />
 
     </application>
 
